fixed cards gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,6 @@ img {
 	display: flex;
 	gap: 50px;	
 	margin-left: 93px;
-	/* padding: 24px 0; */
 }
 
 .header-info {
@@ -190,8 +189,6 @@ a.current {
 /* Our team section */
 .team-section {
 	background-color:#F5F4FA ;
-	/* display: flex;
-	justify-content: center; */
 }
 
 .team-cards {
@@ -332,16 +329,13 @@ a.current {
 .portfolio-cards {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 30px 30px;
-	
-}
-
-.portfolio-card {
-	border: 1px solid #EEEEEE;
-	flex-basis: calc((100% - 3*30px)/3);
+	width: 100%;
+	gap: 30px;
 }
 
 .portfolio-card-info {
+	border: 1px solid #EEEEEE;
+	border-top: 0px;
 	padding: 20px 24px ;
 }
 
